adding the lambda service
